--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
     text-rendering: optimizeSpeed;
     overflow-x: hidden;
     height: 100%;
-    min-width: 940px;
+    margin: 0 auto;
 }
 
 ol,
@@ -127,6 +127,9 @@ body{
     width:270px;
     background-color: none;
     position: relative;
+}
+.menu-search-form{
+    display: none;
 }
 .search-form__input{
     background: none;
@@ -542,6 +545,9 @@ body{
     display: flex;
     justify-content: center;
 }
+.menu-social-links{
+    display: none;
+}
 .social-links_output{
     margin-left: -30px;
 }
@@ -685,7 +691,6 @@ body{
 .catalog-links__item:nth-child(6n){
     grid-column: 1 / span 2;
     grid-row: 2 / span 3;
-    background: blue;
 }
 .new:after{
     content: "NEW";
@@ -1714,3 +1719,294 @@ slick-prev slick-arrow
 .cart-operation .btn-base{
     margin: 0 5px;
 }
+.button-menu-creation{
+    display: none;
+}
+
+.menu-checker{
+    display: none;
+}
+.full-background{
+    background-color: #000;
+    opacity: 0.7;
+    transition: 0.2s;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 800;
+    display: none;
+}
+
+@media(max-width:939px) {
+
+    .main-nagivation{        
+        position: absolute;
+        flex-direction: column;
+        top: 0;
+        margin: 0;
+        height: auto;
+        z-index: 1000;
+        padding: 20px;
+        background: #32425C;
+        width: 300px;
+        left: -300px;
+        transition: left .3s;
+        -webkit-transform: translateZ(0);
+        -webkit-backface-visibility: hidden;
+    }
+    .btn-menu-creation{
+        color: #fff;
+        padding: 5px;
+        position: absolute;
+        top: 6px;
+        left: 5px;
+        cursor: pointer;
+        transition: left .23s;
+        z-index: 900;
+        width: 42px;
+        -webkit-transform: translateZ(0);
+        -webkit-backface-visibility: hidden;
+    }
+
+    .btn-menu-creation span{
+        display: block;
+        height: 2px;
+        background-color: #fff;
+        margin: 7px 0 0;
+        transition: all .1s linear .23s;
+        position: relative;
+    }
+
+    .btn-menu-creation span.first{
+        margin-top: 0;
+    }
+
+    .main-nagivation2::before{
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: #000;
+        position: absolute;
+        opacity: 0.3;
+    }
+    .menu-checker:checked ~ .btn-menu-creation{
+        left: 310px;
+    }
+    .menu-checker:checked ~ .full-background{
+        display: block;
+    }
+    .menu-checker:checked ~ .main-nagivation{
+        left: 0;
+    }
+    .menu-checker:checked ~ .btn-menu-creation span.first{
+        -webkit-transform: rotate(45deg);
+        top: 8px;
+    }
+    .menu-checker:checked ~ .btn-menu-creation span.second{
+        opacity: 0;
+    }
+    .menu-checker:checked ~ .btn-menu-creation span.third{
+        -webkit-transform: rotate(-45deg);
+        top: -10px;
+    }
+    .main-nav{
+        margin-top: 20px;
+        flex-direction: column;
+    }
+    .main-nav__item{
+        height: 48px;
+    }
+    .main-nav__item, .main-nav__link{
+        justify-content: flex-start;     
+    }
+    .main-nav__link{
+        border-bottom-width: 1px;
+    }
+    .main-nav__item:first-child .main-nav__link{
+        margin-left: 0;
+    }
+    .main-nav__item:last-child .main-nav__link{
+        margin-right: 0;
+        border: 0;
+    }
+    .search-form{
+        height: 42px;
+        width: auto;
+        background-color: #293449;
+    }
+    .menu-search-form{
+        display: block;
+    }
+    .social-links__item{
+        margin: 10px 5px;
+        margin-top: 30px;
+    }
+    .menu-social-links{
+        display: flex;
+    }
+    .menu-social-links .social-links__link{
+        background-color: #293449;
+    }
+    .social-links_output{
+        margin: 0;
+    }
+    .info-line{
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .logo{
+       width: 100%;
+       height: 42px;
+       border: 0;
+
+       grid-column-start: 1;
+       grid-column-end: 4;
+    }
+    .logo::before{
+        height: 0px;
+    }
+    .logo::after{
+        height: 0;
+    }
+
+    .booking-order{width: 100%; height: 42px;}
+    .wrap-desc{padding: 0;}
+    .info-block{
+        padding-top: 25px;
+        padding-bottom: 25px;
+        height: auto;   
+        display: grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .info-desc{
+        width: auto;
+    }
+    .info-auth{
+        flex-grow: inherit;
+    }
+    .info-auth-login{
+        flex-direction: column;
+    }
+    .info-auth__link{
+        height: 42px;
+        width: 170px;
+        margin: 0 auto;
+    }
+    .info-auth__link:last-child{
+        margin-top: 5px;
+    }
+
+    body, .conteiner{
+        width: 100%;
+    }
+    main{
+        display: none;
+    }
+    .footer-info-line{
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+
+        text-align: center;
+    }
+    .second-nav{
+        margin-top: 20px;
+    }    
+    .secondary-nav{
+        justify-content: center;
+    }
+    .footer-info-contact{
+        text-align: center;
+    }
+    .catalog-nav{
+        justify-content: center;
+        margin-top: 15px;
+    }
+    ._info-line_output{
+        padding-bottom: 25px;
+    }
+    ._info-line_output-foot{
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .answer-info{
+        grid-row-start: 2;
+        grid-row-end: 1;
+        margin: 0 auto;
+    }
+    .copyright{ 
+        width: auto;
+        margin-top: 20px;   
+    }
+    .social-links__item{
+        margin-top: 40px;
+    }
+}
+@media(max-width:767px) {
+    .info-line {
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
+    }
+    .search-form{
+        width: 100%;
+        grid-column: 1 / span 3;
+        background-color: #212A3A;
+    }
+    .booking-info{
+        grid-column: 1 / span 3;
+        justify-content: center;
+    }
+    .info-block{
+        padding-top: 0;
+        padding-bottom: 25px;
+        display: flex;
+        -webkit-justify-content: space-around; /* Safari */
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .info-desc, .info-contact, .info-auth{
+        padding-top: 25px;
+    }
+    .second-nav{
+        flex-wrap: wrap;
+        align-content: stretch;
+        justify-content: space-around;
+    }
+    .second-nav__item{
+        margin: 10px;
+    }
+
+    .footer-info-line {
+        display: grid;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    .catalog-nav{
+        flex-wrap: wrap;
+        align-content: stretch;
+        justify-content: space-around;
+    }
+
+    .catalog-nav__item{
+        margin: 10px;
+    }
+    .answer-info{
+        width: auto;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+    .answer{
+        margin: 10px;
+    }
+
+}
+
